# xgboost_inference_on_android

./: README.md
01_XGBoostToOnnxInPython/: XGBoost_Iris_ConvertToOnnx.ipynb  xgbc_iris.model
02_OnnxInferInJava/: settings.gradle
02_OnnxInferInJava/app/: build.gradle
02_OnnxInferInJava/app/src/main/java/com/example/onnxinferinjava/: MainActivity.java  ModelRunner.java
02_OnnxInferInJava/app/src/test/java/com/example/onnxinferinjava/: ExampleUnitTest.java
OnnxInferInJava/app/src/androidTest/java/com/example/onnxinferinjava/: ExampleInstrumentedTest.java
OnnxInferInJava/app/src/main/java/com/example/onnxinferinjava/: ModelRunner.java
OnnxInferInJava/app/src/main/res/raw/: xgbc_iris.ort
OnnxInferInJava/app/src/main/res/values/: strings.xml
OnnxInferInJava/gradle/wrapper/: gradle-wrapper.properties
onnx_inference/app/src/main/res/values/: themes.xml
onnx_inference/app/src/main/res/values-night/: themes.xml
onnx_inference_android/app/src/main/: AndroidManifest.xml
onnx_inference_android/app/src/main/res/layout/: activity_main.xml
onnx_inference_cpp/: README.md  main.cc  main_dynamic.cc  main_static.cc
xgboost_train/: BUILD.bazel  MODULE.bazel  README.md  requirements.in  requirements_lock.txt  train.py  xgbc_iris.model  xgbc_iris.onnx  xgbc_iris.with_runtime_opt.ort
