load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_binary(
    name = "train",
    srcs = ["train.py"],
    main = "train.py",
    deps = [
        requirement("skl2onnx"),
        requirement("scikit-learn"),
        requirement("xgboost"),
        requirement("numpy"),
        requirement("onnxruntime"),
        requirement("onnxmltools"),
    ],
)
